--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.5",
     "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
     "webpack": "^2.5.1"
   }
